# freecad-wakatime

./: .gitignore  InitGui.py  README.md  SECURITY.md  initGui3.py  logWakaOld.py  package.xml
scripts/: logWaka.py
