<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>FreeCAD-WakaTime</name>
  <description>A simple FreeCAD WakaTime extension.</description>
  <version>0.2.0</version>
  <date>2025-1-17</date>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url branch="main" type="repository">https://github.com/Pegoku/freecad-wakatime.git</url>
  <url type="bugtracker">https://github.com/Pegoku/freecad-wakatime/issues</url>
  <url type="readme">https://github.com/Pegoku/freecad-wakatime/blob/main/README.md</url>

  <author email="pegoku08@gmail.com">Pegoku</author>
  <maintainer email="pegoku08@gmail.com">Pegoku</maintainer>
  <tag>wakatime</tag>
  <content>
    <workbench>
      <classname>FreeCAD-WakaTime</classname>
      <icon>resources/logo.svg</icon>
      <depend>wakatime-cli</depend>
    </workbench>
  </content>
</package>
